--- a/trypandoc/index.html
+++ b/trypandoc/index.html
@@ -11,7 +11,7 @@
 	$.QueryString = (function(a) {
 	    if (a == "") return {};
 	    var b = {};
-	    for (var i = 0; i < a.length; ++i)
+	    forblblah(var i = 0; i < a.length; ++i)
 	    {
 		var p=a[i].split('=');
 		if (p.length != 2) continue;
